Project

General

Profile

Actions

Bug #40178

closed

rgw/OutputDataSocket: append_output(buffer::list&) says it will (but does not) discard output at data_max_backlog

Added by Matt Benjamin almost 5 years ago. Updated over 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
nautilus, mimic, luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

A dout message in OutputDataSocket::append_output() states that
data will be dropped when appending would cause data_max_backlog
to be exceeded--but the method appends it anyway.


Related issues 3 (0 open3 closed)

Copied to rgw - Backport #40349: nautilus: rgw/OutputDataSocket: append_output(buffer::list&) says it will (but does not) discard output at data_max_backlog ResolvedNathan CutlerActions
Copied to rgw - Backport #40350: luminous: rgw/OutputDataSocket: append_output(buffer::list&) says it will (but does not) discard output at data_max_backlog ResolvedNathan CutlerActions
Copied to rgw - Backport #40351: mimic: rgw/OutputDataSocket: append_output(buffer::list&) says it will (but does not) discard output at data_max_backlog ResolvedNathan CutlerActions
Actions #1

Updated by Matt Benjamin almost 5 years ago

  • Pull request ID set to 28415
Actions #2

Updated by Matt Benjamin almost 5 years ago

  • Status changed from In Progress to Fix Under Review
Actions #3

Updated by Matt Benjamin almost 5 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Nathan Cutler almost 5 years ago

  • Copied to Backport #40349: nautilus: rgw/OutputDataSocket: append_output(buffer::list&) says it will (but does not) discard output at data_max_backlog added
Actions #5

Updated by Nathan Cutler almost 5 years ago

  • Copied to Backport #40350: luminous: rgw/OutputDataSocket: append_output(buffer::list&) says it will (but does not) discard output at data_max_backlog added
Actions #6

Updated by Nathan Cutler almost 5 years ago

  • Copied to Backport #40351: mimic: rgw/OutputDataSocket: append_output(buffer::list&) says it will (but does not) discard output at data_max_backlog added
Actions #7

Updated by Nathan Cutler over 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF